feat: implement Shift Controller and Service with status-based validation